# tracing-exponential

./: Cargo.toml  README.md  do_timing.py  timings.txt
src/: gen.rs  main.rs
