[package]
name = "tracing-exponential"
version = "0.1.0"
authors = ["Audun Skaugen <audun.skaugen@cognite.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tracing_exponential"

[dependencies]
tracing = "0.1"
tokio = {version = "1.5", features = ["full"] }
